# baselib

./: .clang-format  .gitignore  111.md  CMakeLists.txt  README.md  readme.md
baseav/: audioutil
code/: ClipboardUtil.cpp  ClipboardUtil.h  PathUtil.cpp  StringUtil.cpp  StringUtil.h  StringUtil_Win.cpp
code/baseav/: 1.natvis  2.natvis  CMakeLists.txt  audioutil.cpp  format_samplerate.cpp  struct.cpp
code/baseutil/: BaseCallback.cpp  BaseLog.cpp  BaseLogSimple.cpp  BaseTimer.cpp  CLoopBuffer.h  CMakeLists.txt  DirUtil.cpp  DylibUtil.cpp  RetDefine.h  StringUtil.cpp  StringUtil.h  md5.cpp  md5.h
include/: version.h
include/baseutil/: BaseCallback.h  BaseLog.h  BaseLogSimple.h  DylibUtil.h  PathUtil.h
include/baseutil/internal/: macro.h
test/test_baseutil/: CMakeLists.txt  resource.h  test_baselog.cpp  test_baseutil.rc  test_callback.cpp  test_callback.h  test_dylibutil.cpp  test_main.cpp
